| Bug #19247 | Huge memleak in replication of blobs | ||
|---|---|---|---|
| Submitted: | 21 Apr 2006 10:13 | Modified: | 28 Apr 2006 11:19 |
| Reporter: | Jonas Oreland | ||
| Status: | Closed | ||
| Category: | Server: ClusterRep | Severity: | S3 (Non-critical) |
| Version: | OS: | ||
| Assigned to: | Tomas Ulin | Target Version: | |
[24 Apr 2006 11:52]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/5387
[25 Apr 2006 15:31]
Tomas Ulin
approved by pekka
[26 Apr 2006 7:58]
Tomas Ulin
pushed to 5.1.10 it was actually not a memleak, just a reporting error (falsely reporting a HUGE memleak)
[28 Apr 2006 11:19]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented fix in 5.1.10 changelog; closed.

Description: Run test script below. mysqld reports ever increasing memory consumption in replication buffers. How to repeat: let $i = 100000; drop table if exists t2; --disable_query_log while ($i) { create table t2 (a int primary key auto_increment, b blob); insert into t2 values (1, 'jonas'); insert into t2 (b) select b from t2; insert into t2 (b) select b from t2; insert into t2 (b) select b from t2; insert into t2 (b) select b from t2; insert into t2 (b) select b from t2; insert into t2 (b) select b from t2; insert into t2 (b) select b from t2; insert into t2 (b) select b from t2; insert into t2 (b) select b from t2; insert into t2 (b) select b from t2; let $j = 1000; while ($j) { update t2 set b = b + '1'; dec $j; } drop table t2; dec $i; } --enable_query_log Suggested fix: