Bug #19247 Huge memleak in replication of blobs